<resources>
    <string name="app_name">efficientfarmingapp</string>
    <string name="hint_email">Email</string>
    <string name="hint_password">Password</string>
    <string name="btn_login">LOGIN</string>
    <string name="loginusingphn">Login using Phone</string>
    <string name="createacc">Create Account</string>
    <string name="btn_forgot_password">Forgot your password?</string>
    <string name="reqdate">Required Date</string>
    <string name="retdate">Return Date</string>
    <string name="Deposit">Deposit</string>
    <string name="LabourRequired">Labour Required</string>
    <string name="No">NO</string>
    <string name="Yes">YES</string>
    <string name="price">Price</string>
    <string name="pay">Mode Of Payment</string>
    <string name="proceedpay">Proceed to Pay</string>
    <string name="Slide">Slide---></string>
    <string name="buyerone">Buyer</string>
    <string name="sellerone">Seller</string>
    <string name="chnglang">Change Language</string>
    <string name="aware">Awareness Guide</string>
    <string name="Search">Search</string>
    <string name="paychoose">Mode of Payment</string>
    <string name="action_sign_in_short">Register</string>
    <string name="email">Email</string>
    <string name="proceed">Proceed</string>
    <string name="minimum_password">Password too short, enter minimum 6 characters!</string>
    <string name="auth_failed">Authentication failed, check your email and password or sign up</string>
    <string name="change_email">Change Email</string>
    <string name="hint_city">Enter City</string>
    <string name="hint_state">Enter State</string>
    <string name="change_password">Change Password</string>
    <string name="send_password_reset_email">Send Password reset email</string>
    <string name="remove_user">Remove user</string>
    <string name="btn_proceed">PROCEED</string>
    <string name="Name">Name</string>
    <string name="hint_otp">Fill OTP</string>
    <string name="btn_s_otp">Confirm OTP</string>
    <string name="phone_number">phone number</string>
    <string name="new_pass">New Password</string>
    <string name="btn_otp">Send OTP</string>
    <string name="title_activity_profile">Firebase</string>
    <string name="title_activity_login">Sign in</string>
    <string name="hint_number">Phone Number</string>
    <string name="hint_name">Fullname</string>
    <string name="register">REGISTER</string>
    <string name="prompt_password">Please enter your password</string>
    <string name="btn_link_to_register">Not a member? Get registered in Firebase now!</string>
    <string name="btn_link_to_login">Already registered. Login Me!</string>
    <string name="title_activity_reset_password">ResetPasswordActivity</string>
    <string name="btn_reset_password">Reset Password</string>
    <string name="btn_back">

-<![CDATA[<< Back]]>
</string>
    <string name="hint_new_email">New Email</string>
    <string name="btn_change">Change</string>
    <string name="btn_send">Send</string>
    <string name="btn_remove">Remove</string>
    <string name="btn_sign_out">Sign Out</string>
    <string name="lbl_forgot_password">Forgot password?</string>
    <string name="forgot_password_msg">We just need your registered Email Id to sent you password reset instructions.</string>
    <string name="email_id">Email ID</string>
    <string name="productchoose">Choose the product</string>
    <string-array name="productarray">

        <item>Tractor</item>

        <item>Plow</item>

        <item>Harrow</item>

        <item>Combine Harvester</item>

        <item>Beller</item>

        <item>Planter</item>

    </string-array>
    <string-array name="payarray">
        <item>Cash on delivery</item>
        <item>Paytm</item>
        <item>Credit/Debit card</item>
    </string-array>
    <string name="add">Address</string>
    <string name="contact">Contact No</string>
    <string name="r11">Nanndi Foundation</string>
    <string name="r12">
        502, Trendset Towers, Road No 2\n
        Banjara Hills, Hyderabad – 500 034\n
        Andhra Pradesh, India
    </string>
    <string name="r13">
        Tel: 91-40-23556491/92\n
        Fax: 91-40-23556537\n
        Email: info@naandi.org\n
        Website: www.naandi.org
    </string>
    <string name="r21">ASA\n(Action For Social Development)</string>
    <string name="r22">
        E-5/A Girish Kunj, \nAbove State Bank of India, (Shahpura Branch),\n Arera colony, Bhopal,
Madhya Pradesh-462016\n, India
    </string>
    <string name="r23">Tel: 91-755-2427369,4057926\n
Fax: 91-755-4057925 \nEmail:info@asabhopal.org\n
Website:www.asaindia.org</string>
    <string name="r31">PRADAN\n(Professional Assistance for Development Action)</string>
    <string name="r32">E-1/A, Kailash Colony\n
Ground Floor and Basement\n
Kailash Colony
New Delhi - 110 048</string>
    <string name="r33">
        Tel: 4040 7700, 2924 8826 to 2924 8832\n
E-mail: headoffice@pradan.net\n
Website: www.pradan.net
    </string>
    <string name="r41">SRIJAN\n(Self-Reliant Initiative through \nJoint Action)</string>
    <string name="r42">
        4, Community Shopping Centre, \nFirst Floor, Anupam Apartments
Mehrauli\n Badarpur Road, Saidullajab, \nNew Delhi-110068
    </string>
    <string name="r43">
        Tel: 011-41664521/29536411\n
Fax: 011-41664521\n
Email:delhi@srijanindia.org\n
Website: srijanindia.org
    </string>
    <string name="r51">ISAP\n(India Society of Agri-Business Professionals)</string>
    <string name="r52">
        23, Zamrudpur Community Centre\n
Kailash Colony Extension\n
New Delhi -110048
    </string>
    <string name="r53">
        Tel: 91-11-43154100\n
Fax: 91-11-41731674\n
E-mail:isapho@isapindia.org\n
Website: www.isapindia.org
    </string>
    <string name="r61">CARD\n(Centre for Advanced Research \nand Development)</string>
    <string name="r62">H-II/195, Arvind Vihar, \nBaghmugalia,
Bhopal, Madhya Pradesh \n(India)
Pin- 462043</string>
    <string name="r63">Tel:91-0755 - 2481234\nFax:91-0755 - 2481737\nmail:cardindiabhopal@gmail.com
\nWebsite: cardindia.net</string>
    <string name="r71">Aga Khan Foundation (India)</string>
    <string name="r72">Sarojini House, 2nd floor\n
6, Bhagwan Dass Road\n
New Delhi 110001</string>
    <string name="r73">Tel: (11) 23782173\n
Fax: (11) 23782174\n
E-mail:akfisp.2014@gmail.com
</string>
    <string name="r81">DHAN Foundation\n(Development of Humane Action)</string>
    <string name="r82">Kennet Cross Road\n
Near Seventh Day School\n
1A, Vaidyanathapuram East\n
Madurai 625 016, Tamil Nadu, INDIA</string>
    <string name="r83">Tel : +91-452-2610794, 2610805\n Fax : +91-452-2602247 \nEmail:dhanfoundation@dhan.org
\nWebsite:http://www.dhan.org</string>
    <string name="r91">GREENPEACE</string>
    <string name="r92">A-23,Second floor,\n
Green park, (near Aurbindo Market)\n
New Delhi 110016</string>
    <string name="r93">Tel : 91-11-66665000\n
Fax : 91-11-66665010\n
Website:http://www.greenpeace.org</string>
    <string name="r101">
        Digital GREEN
    </string>
    <string name="harvest">Top five modern harvesting machines</string>
    <string name="harvest_theory">
        Modern farming technology is used to improve the wide types of production practices employed by our farmers. It makes use of hybrid seeds of selected variety of a single crop, technologically advanced equipment and lots of energy subsidies in the form of irrigation water, fertilizers and pesticides. The most common types of equipment and machinery used on farms include tractors, balers, combines, plows, mowers, planters and sprayers.
Farming is no longer a small scale production, but rather one that is done with huge machines over thousands of hectares. This efficiency boost means that the world has access to any food it wants at any time. 
Let\'s take a look at 5 modern machines that dramatically increased the efficiency and production of farming operations across the globe.
        1. Small-scale Potato Harvester
This machine digs potato from the soil by separating soil from the roots. It functions on small scale but separates the soil quickly to reduce the problems in harvesting of potato.  Even though the picture depicts a small-scale machine, the same technology is used in tractor-towed rigs to harvest potatoes at an even greater scale.
        2. Automatic In row weeder
Weeding is an important practice in agriculture. Growth of weeds can interrupt the growth of crops which will eventually lead to the unavailability of nutrients. This machine quickly and effectively tears up weeds without worrying about hurting the original crops. Letting your fields get overgrown can allow weeds and invasive species to choke out your cash crop and leave the farmer with pennies. Pesticides and weedicides are common, but many take issue with the possibly harmful chemicals hidden within.
3. Automatic cow milking machine
Cow in our Indian society is used for milk and many other products are made out of it. This way it is important but if there is an easy way out to milk cow through machine; it can enhance the productivity in agriculture ultimately by increasing the milk production of the country
        4. Carrot harvester and separator
This machine is no different from the potato harvester but provides an ease in harvesting carrot from the ground along with roots which are digged deep inside. The machine is a boon in harvesting as it can emulsify the rate at which harvesting of carrot can be done.
5. Robotic lettuce harvester
HOOVER XL is a powerful machine to aspirate the residues of crop and leaves on the ground, designed for fourth range producers. With 4 steering wheels, the aspirator is fitted with a side shifting cutting bars thus reducing the problems in harvesting lettuce.
These machines inevitably enhance the production in some or the other way thus reducing the manpower and automatically enhancing the economy of the countries. No matter how advanced they are but they can be the future of Indian agriculture in their own innovative ways.

        https://krishijagran.com/farm-mechanization/top-five-modern-harvesting-machines/

    </string>
    <string name="tractor">Top 7 Tractor Brands in India </string>
    <string name="tractor_theory">
        The tractor is one of the best utility vehicles of all times, particularly in India. Agriculture, a major source of livelihood in the country uses tractors for farm mechanization. Though the Indian tractor industry is young today it has emerged as one of the largest markets in the world (exclusive of sub 20 hp belt driven tractors used in Beijing), accounting 1/3rd of the global production.
Today in this article we will be discussing the top 7 tractor manufacturers that provide tractors under 70 horsepower (HP):
Mahindra and Mahindra
For a common man or farmer, the very first name that can come to mind is ‘Mahindra’. Over the years, the Mahindra Tractors has emerged as one of the top manufacturers of agricultural and farm equipment, including tractors. Mahindra and Mahindra Company was started by J.C Mahindra and K.C Mahindra. Mahindra Tractors are popular because of their ability to give high performance with added strength as well as durability.
They are available from 20 HP to 50 HP Plus range and some of them are:
Mahindra YUVRAJ 215 NXT ( 20HP)
Mahindra JIVO 245 DI 4WD (21 - 30 HP)
Mahindra YUVO 265 DI (31 - 40 HP)
Mahindra YUVO 475 DI (41 - 50 HP)
Mahindra 555 Power Plus (50 HP Plus)

    TAFE - Tractor and Farm Equipment Ltd
TAFE was founded by R. Anantha Ramakrishnan in 1960 and today it is the 2nd largest selling tractor maker in India. All the types of tractors under the TAFE brand are strong and durable as it is made with superior technology. Some of the TAFE tractors less than 70 HP are:
30 DI Orchard Plus 2WD (30 HP)
5900 DI 2WD (56 - 60 HP)

    https://krishijagran.com/farm-mechanization/top-7-tractor-brands-in-india/
    </string>
    <string name="know">KNOW MORE</string>
</resources>