<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".AccountActivity.SignupActivity">

    <ScrollView
        android:layout_width="370dp"
        android:layout_height="0dp"
        tools:layout_editor_absoluteX="10dp"
        tools:layout_editor_absoluteY="0dp">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="840dp"
            android:background="@drawable/bg"
            android:gravity="center"
            android:orientation="vertical"
            android:padding="@dimen/activity_horizontal_margin"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.0"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent">


            <ImageView
                android:layout_width="280dp"
                android:layout_height="120dp"
                android:layout_gravity="center_horizontal"
                android:layout_marginTop="20dp"
                android:layout_marginBottom="30dp"
                android:contentDescription=""
                android:src="@drawable/logo_new"
                tools:ignore="ContentDescription" />

            <EditText
                android:id="@+id/name"
                android:layout_width="match_parent"
                android:layout_height="40dp"
                android:layout_marginTop="50dp"
                android:layout_marginBottom="-30dp"
                android:background="@drawable/order_radius_name"
                android:drawableStart="@drawable/ic_action_name"
                android:focusableInTouchMode="true"
                android:hint="@string/Name"
                android:inputType="textPersonName"
                android:maxLines="1"
                android:textColor="@color/input_login" />


            <EditText
                android:id="@+id/city"
                android:layout_width="match_parent"
                android:layout_height="40dp"
                android:layout_marginTop="50dp"
                android:layout_marginBottom="-30dp"
                android:background="@drawable/order_radius_name"
                android:drawableStart="@drawable/ic_action_name"
                android:focusableInTouchMode="true"
                android:hint="@string/hint_city"
                android:inputType="text"
                android:maxLines="1"
                android:textColor="@color/input_login" />


            <EditText
                android:id="@+id/state"
                android:layout_width="match_parent"
                android:layout_height="40dp"
                android:layout_marginTop="50dp"
                android:layout_marginBottom="-30dp"
                android:background="@drawable/order_radius_name"
                android:drawableStart="@drawable/ic_action_name"
                android:focusableInTouchMode="true"
                android:hint="@string/hint_state"
                android:inputType="textPersonName"
                android:maxLines="1"
                android:textColor="@color/input_login" />


            <EditText
                android:id="@+id/email"
                android:layout_width="match_parent"
                android:layout_height="40dp"
                android:layout_marginTop="50dp"
                android:background="@drawable/order_radius_name"
                android:drawableStart="@drawable/ic_action_name"
                android:focusableInTouchMode="true"
                android:hint="@string/email"
                android:inputType="textEmailAddress"
                android:maxLines="1"
                android:textColor="@color/input_login" />


            <EditText
                android:id="@+id/password"
                android:layout_width="match_parent"
                android:layout_height="40dp"
                android:layout_marginTop="20dp"
                android:background="@drawable/order_radius_name"
                android:drawableLeft="@drawable/ic_action_password"
                android:focusableInTouchMode="true"
                android:hint="@string/hint_password"
                android:imeActionId="@+id/login"
                android:imeOptions="actionUnspecified"
                android:inputType="textPassword"
                android:maxLines="1"
                android:textColor="@color/input_login"
                tools:ignore="InvalidImeActionId" />


            <Button
                android:id="@+id/sign_up_button"
                style="?android:textAppearanceSmall"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="16dp"
                android:background="@drawable/button_rounded_bg"
                android:onClick="regst"
                android:text="@string/action_sign_in_short"
                android:textColor="@android:color/white"
                android:textStyle="bold" />

            <!--<Button-->
            <!--android:id="@+id/btn_reset_password"-->
            <!--android:layout_width="fill_parent"-->
            <!--android:layout_height="wrap_content"-->
            <!--android:layout_marginTop="20dip"-->
            <!--android:background="@null"-->
            <!--android:text="@string/btn_forgot_password"-->
            <!--android:textAllCaps="false"-->
            <!--android:textColor="@color/colorAccent" />-->

            <!-- Link to Login Screen -->

            <Button
                android:id="@+id/sign_in_button"
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="20dip"
                android:background="@null"
                android:text="@string/btn_link_to_login"
                android:textAllCaps="false"
                android:textColor="@color/input_login"
                android:textSize="15sp" />
        </LinearLayout>
    </ScrollView>


    <ProgressBar
        android:id="@+id/progressBar"
        android:layout_width="30dp"
        android:layout_height="30dp"
        android:layout_gravity="center|bottom"
        android:layout_marginBottom="20dp"
        android:visibility="gone" />

</android.support.constraint.ConstraintLayout>