<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:background="@color/white"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".AccountActivity.LoginActivity">


    <LinearLayout
        android:layout_width="fill_parent"
        android:layout_height="match_parent"
        android:background="@drawable/bg"
        android:gravity="center"
        android:orientation="vertical"
        android:padding="@dimen/activity_horizontal_margin"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.0">

        <EditText
            android:id="@+id/name"
            android:layout_width="match_parent"
            android:layout_height="40dp"
            android:layout_marginTop="-120dp"
            android:layout_marginBottom="10dp"
            android:hint="@string/hint_name"
            android:autofillHints="@string/hint_name"
            android:inputType="textPersonName"
            android:textColor="@color/input_login"
            android:textColorHint="@color/input_login"
            android:textStyle="bold"
            android:gravity="center"
            android:background="@drawable/order_radius_name"/>

        <EditText
            android:id="@+id/city"
            android:layout_width="fill_parent"
            android:layout_height="40dp"
            android:layout_marginTop="10dp"
            android:layout_marginBottom="25dp"
            android:hint="@string/hint_city"
            android:inputType="text"
            android:textStyle="bold"
            android:textColor="@color/input_login"
            android:textColorHint="@color/input_login"
            android:gravity="center"
            android:background="@drawable/order_radius_name"
            />

        <EditText
            android:id="@+id/state"
            android:layout_width="fill_parent"
            android:layout_height="40dp"
            android:layout_marginTop="10dp"
            android:layout_marginBottom="25dp"
            android:hint="@string/hint_state"
            android:inputType="text"
            android:textStyle="bold"
            android:textColor="@color/input_login"
            android:textColorHint="@color/input_login"
            android:gravity="center"
            android:background="@drawable/order_radius_name"
            />

        <Button
            android:id="@+id/btn_proceed"
            android:layout_width="280dp"
            android:layout_height="40dp"
            android:layout_marginTop="10dip"
            android:background="@drawable/button_rounded_bg"
            android:onClick="@sucesslog"
            android:text="@string/btn_proceed"
            android:textColor="@color/white"
            android:textSize="18dp"
            />
        <!-- Link to Login Screen -->
    </LinearLayout>

    <ProgressBar
        android:id="@+id/progressBar"
        android:layout_width="100dp"
        android:layout_height="100dp"
        android:layout_gravity="center|bottom"
        android:visibility="gone"
        tools:ignore="MissingConstraints"
        tools:layout_editor_absoluteX="142dp"
        tools:layout_editor_absoluteY="162dp"
        />

</android.support.constraint.ConstraintLayout>