<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:background="@color/white"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".AccountActivity.LoginActivity">


    <LinearLayout
        android:layout_width="fill_parent"
        android:layout_height="match_parent"
        android:background="@drawable/bg"
        android:gravity="center"
        android:orientation="vertical"
        android:padding="@dimen/activity_horizontal_margin"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.0">


        <ImageView
            android:layout_width="320dp"
            android:maxHeight="180dp"
            android:layout_height="120dp"
            android:layout_gravity="center_horizontal"
            android:layout_marginBottom="180dp"
            android:contentDescription=""
            android:src="@drawable/logo_new"
            tools:ignore="ContentDescription" />


        <EditText
            android:id="@+id/email"
            android:layout_width="match_parent"
            android:layout_height="40dp"
            android:layout_marginTop="-120dp"
            android:layout_marginBottom="10dp"
            android:hint="@string/hint_email"
            android:autofillHints="@string/hint_email"
            android:inputType="textEmailAddress"
            android:textColor="@color/input_login"
            android:textColorHint="@color/input_login"
            android:background="@drawable/order_radius_name"
            android:drawableStart="@drawable/ic_action_name"/>


        <EditText
            android:id="@+id/password"
            android:layout_width="fill_parent"
            android:layout_height="40dp"
            android:layout_marginTop="10dp"
            android:layout_marginBottom="25dp"
            android:hint="@string/hint_password"
            android:inputType="textPassword"
            android:textColor="@color/input_login"
            android:textColorHint="@color/input_login"
            android:background="@drawable/order_radius_name"
            android:drawableLeft="@drawable/ic_action_password"
            />


        <!-- Login Button -->

        <Button
            android:id="@+id/btn_login"
            android:layout_width="280dp"
            android:layout_height="40dp"
            android:layout_marginTop="10dip"
            android:background="@drawable/button_rounded_bg"
            android:onClick="@sucesslog"
            android:text="@string/btn_login"
            android:textColor="@color/white"
            android:textSize="18dp"
            />
        <!-- Link to Login Screen -->

        <Button
            android:id="@+id/login_phone"
            android:layout_width="280dp"
            android:layout_height="40dp"
            android:text="Login Using Phone"
            android:layout_marginTop="20dp"
            android:background="@drawable/button_rounded_register"
            android:onClick="@createacc"
            android:textAllCaps="false"
            android:textColor="@color/white"
            android:textSize="18dp"
            tools:ignore="SpUsage"
            />

        <Button
            android:id="@+id/btn_signup"
            android:layout_width="280dp"
            android:layout_height="40dp"
            android:layout_marginTop="20dp"
            android:background="@drawable/button_rounded_register"
            android:onClick="@createacc"
            android:text="CREATE ACCOUNT"
            android:textAllCaps="false"
            android:textColor="@color/white"
            android:textSize="18dp"
            tools:ignore="SpUsage" />

        <Button
            android:id="@+id/btn_reset_password"
            android:layout_width="fill_parent"
            android:layout_height="35dp"
            android:layout_marginTop="0dip"
            android:background="@null"
            android:onClick="@forget"
            android:text="@string/btn_forgot_password"
            android:textAllCaps="false"
            android:textColor="@color/colorAccent"
            android:textSize="25dp"
            android:textStyle="bold" />
    </LinearLayout>

    <ProgressBar
        android:id="@+id/progressBar"
        android:layout_width="100dp"
        android:layout_height="100dp"
        android:layout_gravity="center|bottom"
        android:visibility="gone"
        tools:ignore="MissingConstraints"
        tools:layout_editor_absoluteX="142dp"
        tools:layout_editor_absoluteY="162dp"
        />

</android.support.constraint.ConstraintLayout>